[rename] the intermediate image to just `wp-base`

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ script:
   docker build \
      --build-arg "GITHUB_API_USER=${GITHUB_API_USER}"           \
      --build-arg "GITHUB_API_TOKEN=${GITHUB_API_TOKEN}"         \
-     -t docker-registry.default.svc:5000/wwp-test/wp-base docker/wp-base
+     -t wp-base docker/wp-base
   for docker_dir in $(find docker -mindepth 1 -maxdepth 1 -type d \
                       | grep -v wp-base | xargs -t -n 1); do
     docker build "$docker_dir"
