--- a/docker/wordpress-nginx/Dockerfile
+++ b/docker/wordpress-nginx/Dockerfile
@@ -1,5 +1,5 @@
 FROM openresty/openresty:1.27.1.1-0-alpine-fat AS openresty
-FROM docker-registry.default.svc:5000/wwp-test/wp-base AS wp-base
+FROM wp-base
 FROM rancher/nginx-ingress-controller:nginx-1.11.3-rancher1
 COPY --from=openresty /usr/local/openresty/nginx/sbin/nginx /usr/bin/nginx
 COPY --from=openresty /usr/local/openresty /usr/local/openresty
