[upgrade] Travis VMs to Jammy
This fixes the following symptom in Xenial (the default) Travis builds:

```
E: Problem executing scripts APT::Update::Post-Invoke 'rm -f /var/cache/apt/archives/*.deb /var/cache/apt/archives/partial/*.deb /var/cache/apt/*.bin || true'
```

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 # (c) All rights reserved. ECOLE POLYTECHNIQUE FEDERALE DE LAUSANNE, Switzerland, VPSI, 2017
 ---
+dist: jammy
+
 sudo: required
 
 env:
