[fix] the `/tmp/cachebuster` thing

--- a/docker/wp-base/Dockerfile
+++ b/docker/wp-base/Dockerfile
@@ -44,11 +44,10 @@ COPY install-wordpress.sh /tmp
 RUN chmod +x /tmp/install-wordpress.sh
 
 # 💡 The Docker cache unfortunately has no way of knowing that you
-# `git push`ed something. If you want to force a rebuild of only the
-# rules starting here (while still leveraging the cache for everything
-# above), uncomment the next line. Keep incrementing the number each
-# time you want to bypass the cache again.
-# ADD cachebuster /tmp/cachebuster1
+# `git push`ed something. Here is a way to force a rebuild everytime,
+# regardless of the cached state (on your workstation) or lack thereof
+# (in a cloud build).
+ADD "https://www.random.org/cgi-bin/randbyte?nbytes=10&format=h" /tmp/cachebuster
 
 ARG WORDPRESS_VERSION_LINEAGES="6.1"
 ARG AWS_ACCESS_KEY_ID
