--- a/ansible/inventory/test/openshift_namespaces.yml
+++ b/ansible/inventory/test/openshift_namespaces.yml
@@ -6,6 +6,7 @@ all_openshift_namespaces:
          eyaml_keys:
            priv: "/keybase/team/epfl_wp_test/eyaml-privkey.pem"
            pub: "{{ playbook_dir }}/eyaml/epfl_wp_test.pem"
-       hosts:
+       "hosts":
          svc0041t-wordpress:
+           openshift_namespace: svc0041t-wordpress
            ansible_python_interpreter: "{{ansible_playbook_python}}"
