--- a/ansible/vars/image-vars.yml
+++ b/ansible/vars/image-vars.yml
@@ -1,16 +1,10 @@
-openshift_local_images_base: "docker-registry.default.svc:5000/{{ openshift_namespace }}"
+isas_fsd_catalog_git_uri: https://github.com/epfl-si/isas-fsd-catalog
 
-wp_base_base_image: >-
-  {{ "ubuntu:focal" |
-  parse_external_docker_tag(mirrored_base=openshift_local_images_base) }}
+builder_secrets: "{{ lookup('file', '/keybase/team/epfl_wp_test/WordPress-Next/ocp4_builder_secrets.yml') | from_yaml }}"
 
-wp_base_base_image_manually_push_to: >-
-   os-docker-registry.epfl.ch/{{ openshift_namespace
-   }}/{{ wp_base_base_image.shortname }}:{{ wp_base_base_image.tag }}
+_builder_robot_credentials: "{{ builder_secrets.quay.pull_robot.name }}:{{ builder_secrets.quay.pull_robot.token }}"
 
-nginx_image_name: nginx
-mgmt_image_name: mgmt
-wp_base_image_name: wp-base
-backup_cron_image_name: cronjob
-
-wp_ops_git_uri: https://github.com/epfl-si/wp-ops
+builder_pull_secret_config:
+  auths:
+    "quay-its.epfl.ch":
+      "auth": "{{ _builder_robot_credentials | b64encode }}"
