[refactor] Rename `wordpress-openshift-namespace` to `wordpress-namespace`
... and `inventory/{test,prod}/openshift_namespaces.yml` to `inventory/{test,prod}/wordpress_namespaces.yml`

--- a/ansible/roles/wordpress-namespace/vars/main.yml
+++ b/ansible/roles/wordpress-namespace/vars/main.yml
@@ -1,5 +1,5 @@
 ---
-# vars file for wordpress-openshift-namespace
+# vars file for wordpress-namespace
 
 openshift_is_production: "{{ openshift_namespace == 'wwp' }}"
 
