--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -39,10 +39,10 @@
       tags:
         - rke2-cluster
 
-- name: OpenShift namespaces
-  # Like above, members of the all_openshift_namespaces are OpenShift
-  # namespaces, rather than hosts
-  hosts: all_openshift_namespaces
+- name: WordPress namespaces
+  # Like above, members of the all_wordpress_namespaces are OpenShift
+  # (or RKE2) namespaces, rather than hosts
+  hosts: all_namespaces
   gather_facts: no    # Ansible facts are useless for this play
   roles:
-    - role: roles/wordpress-openshift-namespace
+    - role: roles/wordpress-namespace
