--- a/ansible/roles/rke2-cluster/tasks/main.yml
+++ b/ansible/roles/rke2-cluster/tasks/main.yml
@@ -101,8 +101,16 @@
     - cluster.nginx
 
 
-# TODO cluster yaml custom configuration ( Ask to Dominique)
-
+- name: IngressClass/wordpress
+  kubernetes.core.k8s:
+    state: present
+    definition:
+      apiVersion: networking.k8s.io/v1
+      kind: IngressClass
+      metadata:
+        name: wordpress
+      spec:
+        controller: epfl.ch/ingress-wordpress
 
 # install monitoring
 
