[refactor]&[fix] ssh access to nodes
- Move `SSH_KEYS` variable into top level `ansible/vars/` directory
- Rename it to `admins`
- Make sure the tasks that use it actually end up being called!

--- a/ansible/roles/rke2-host/tasks/config_ssh.yml
+++ b/ansible/roles/rke2-host/tasks/config_ssh.yml
@@ -1,10 +1,11 @@
----
+- tags: always
+  include_vars: access.yml
+
 # This will be already done in the base iso image
 - name: Ensure ssh keys for root
   ansible.posix.authorized_key:
     user: root
-    state: "{{ item.state | default(present) }}"
     key: "https://github.com/{{ item.github }}.keys"
     comment: "# ssh-import-id gh:{{ item.github }}"
-  with_items: "{{ SSH_KEYS }}"
+  with_items: "{{ admins }}"
   become: true
