--- a/ansible/roles/rke2-host/tasks/main.yml
+++ b/ansible/roles/rke2-host/tasks/main.yml
@@ -14,3 +14,10 @@
     - system.install
   import_tasks:
     file: install.yml
+
+- name: Ssh Access
+  tags:
+    - system.config
+    - system.config.ssh
+  import_tasks:
+    file: config_ssh.yml
