--- a/ansible/roles/wordpress-namespace/tasks/smtp-secret.yml
+++ b/ansible/roles/wordpress-namespace/tasks/smtp-secret.yml
@@ -2,7 +2,7 @@
 # {{ dc }} variable.
 
 - tags: always
-  include_vars: "../vars/secrets-{{ openshift_namespace }}.yml"
+  include_vars: "../vars/secrets-{{ inventory_namespace }}.yml"
 
 - name: "Secret SMTP password ({{ smtp.username }})"
   openshift:
@@ -12,7 +12,7 @@
     type: Opaque
     metadata:
       name: "smtp-password"
-      namespace: "{{ openshift_namespace }}"
+      namespace: "{{ inventory_namespace }}"
     data:
        SERVICE_WWP_NOREPLY_PASSWORD: "{{ smtp.password | eyaml(eyaml_keys) | b64encode }}"
   tags: httpd.secrets
