--- a/ansible/inventory/prod/wordpress_namespaces.yml
+++ b/ansible/inventory/prod/wordpress_namespaces.yml
@@ -11,3 +11,4 @@ all_namespaces:
         #   nfs_path: nas-app-ma-nfs1:/si_test_openshift_wp_jahia_app/wordpress 
         svc0041p-wordpress:
           ansible_python_interpreter: "{{ansible_playbook_python}}"
+          inventory_namespace: svc0041p-wordpress
