--- a/ansible/inventory/test/wordpress_namespaces.yml
+++ b/ansible/inventory/test/wordpress_namespaces.yml
@@ -8,5 +8,5 @@ all_namespaces:
           pub: "{{ playbook_dir }}/eyaml/epfl_wp_test.pem"
       "hosts":
         svc0041t-wordpress:
-          openshift_namespace: svc0041t-wordpress
+          inventory_namespace: svc0041t-wordpress
           ansible_python_interpreter: "{{ansible_playbook_python}}"
