--- a/ansible/roles/wordpress-namespace/tasks/menu-api.yml
+++ b/ansible/roles/wordpress-namespace/tasks/menu-api.yml
@@ -3,11 +3,11 @@
 
 - name: "Testing ImageStreams and their build information for Menu API"
   when: >-
-    openshift_namespace == "wwp-test"
+    inventory_namespace == "wwp-test"
   openshift_imagestream:
     metadata:
       name: "menu-api-siblings"
-      namespace: "{{ openshift_namespace }}"
+      namespace: "{{ inventory_namespace }}"
     git:
       repository: https://github.com/epfl-si/wp-menu-api
       ref: "master"
@@ -23,8 +23,8 @@
     ("menu_api.rebuild" in ansible_run_tags)
     )
     and 
-    openshift_namespace == "wwp-test"
-  shell: "oc -n {{ openshift_namespace }} start-build --wait {{ menu_api_image_name }}"
+    inventory_namespace == "wwp-test"
+  shell: "oc -n {{ inventory_namespace }} start-build --wait {{ menu_api_image_name }}"
   tags: menu_api.rebuild
 
 - name: menu-api-configmap ConfigMap
@@ -34,7 +34,7 @@
     kind: ConfigMap
     metadata:
       name: menu-api-configmap
-      namespace: "{{ openshift_namespace }}"
+      namespace: "{{ inventory_namespace }}"
     data:
       menu-api-config.yaml: |
         WPVERITAS_URL: "https://{{ _wp_veritas_base_url }}/api/v1/sites"
@@ -80,10 +80,10 @@
           https://www.epfl.ch/labs/en/
   vars:
     _wp_veritas_base_url: >-
-      {{ "wp-veritas.epfl.ch" if openshift_namespace == "wwp"
+      {{ "wp-veritas.epfl.ch" if inventory_namespace == "wwp"
       else "wp-veritas-test.epfl.ch" }}
     _debug: >-
-      {{ false if openshift_namespace == "wwp"
+      {{ false if inventory_namespace == "wwp"
       else true }}
   register: _menu_api_config_map
 
@@ -94,7 +94,7 @@
     ( (_menu_api_config_map | default()) is changed)
   local_action:
     module: shell
-    cmd: "oc rollout latest {{ menu_api_image_name }} --namespace {{ openshift_namespace }}"
+    cmd: "oc rollout latest {{ menu_api_image_name }} --namespace {{ inventory_namespace }}"
   tags:
     - menu_api.redeploy
 
@@ -104,7 +104,7 @@
     kind: DeploymentConfig
     metadata:
       name: menu-api-siblings
-      namespace: "{{ openshift_namespace }}"
+      namespace: "{{ inventory_namespace }}"
     spec:
       replicas: 1
       selector:
@@ -116,7 +116,7 @@
         spec:
           containers:
             - name: menu-api-siblings
-              image: 'docker-registry.default.svc:5000/{{ openshift_namespace }}/menu-api-siblings:latest'
+              image: 'docker-registry.default.svc:5000/{{ inventory_namespace }}/menu-api-siblings:latest'
               imagePullPolicy: Always
               volumeMounts:
                 - name: menu-api-config
@@ -135,9 +135,9 @@
           from:
             kind: ImageStreamTag
             name: 'menu-api-siblings:latest'
-            namespace: "{{ openshift_namespace }}"
+            namespace: "{{ inventory_namespace }}"
   vars:
-    _subpath: "{{ _subpaths[openshift_namespace] }}"
+    _subpath: "{{ _subpaths[inventory_namespace] }}"
     _subpaths:
       wwp-test: .
       wwp: .
@@ -148,7 +148,7 @@
     kind: Service
     metadata:
       name: menu-api-siblings
-      namespace: "{{ openshift_namespace }}"
+      namespace: "{{ inventory_namespace }}"
     spec:
       type: ClusterIP
       ports:
@@ -165,7 +165,7 @@
     kind: CronJob
     metadata:
       name: menu-api-refresh-cron
-      namespace: "{{ openshift_namespace }}"
+      namespace: "{{ inventory_namespace }}"
     spec:
       schedule: "*/10 * * * *" # Every 10 minutes, mind the CloudFlare cache
       concurrencyPolicy: "Forbid" # Do not start a new cron if the previous one is still running
