--- a/ansible/roles/wordpress-namespace/tasks/report-uri.yml
+++ b/ansible/roles/wordpress-namespace/tasks/report-uri.yml
@@ -3,22 +3,22 @@
 
 - name: "Pull {{ report_uri_base_mirrored_from }} into {{ report_uri_base_mirrored_to }}"
   when: >-
-    openshift_namespace == "wwp-test"
+    inventory_namespace == "wwp-test"
   delegate_to: localhost
   openshift_imagestream:
     metadata:
       name: "{{ report_uri_base_image_name }}"
-      namespace: "{{ openshift_namespace }}"
+      namespace: "{{ inventory_namespace }}"
     from: "{{ report_uri_base_mirrored_from }}"
     tag: "{{ report_uri_base_image_tag }}"
 
 - name: Report URI Build Config and Image Stream
   when: >-
-    openshift_namespace == "wwp-test"
+    inventory_namespace == "wwp-test"
   openshift_imagestream:
     state: latest
     metadata:
-      namespace: "{{ openshift_namespace }}"
+      namespace: "{{ inventory_namespace }}"
       name: report-uri
     git:
       repository: "{{ report_uri_git_uri }}"
@@ -37,7 +37,7 @@
     kind: DeploymentConfig
     metadata:
       name: report-uri
-      namespace: "{{ openshift_namespace }}"
+      namespace: "{{ inventory_namespace }}"
     spec:
       replicas: 1
       selector:
@@ -74,18 +74,18 @@
             from:
               kind: ImageStreamTag
               name: 'report-uri:{{ report_uri_image_tag }}'
-              namespace: "{{ openshift_namespace }}"
+              namespace: "{{ inventory_namespace }}"
 
 - name: (Re-)Build Report URI in OpenShift
   shell:
-    cmd: "oc -n {{ openshift_namespace }} start-build --wait report-uri"
+    cmd: "oc -n {{ inventory_namespace }} start-build --wait report-uri"
   when:
     - >
       ( (_report_uri_imagestream | default({})) is changed )
       or
       "report-uri.rebuild" in ansible_run_tags
     - >-
-      openshift_namespace == "wwp-test"
+      inventory_namespace == "wwp-test"
   tags:
     - report-uri.rebuild
 
@@ -96,7 +96,7 @@
     kind: Service
     metadata:
       name: report-uri
-      namespace: "{{ openshift_namespace }}"
+      namespace: "{{ inventory_namespace }}"
     spec:
       type: ClusterIP
       ports:
@@ -114,7 +114,7 @@
     kind: Route
     metadata:
       name: report-uri
-      namespace: '{{ openshift_namespace }}'
+      namespace: '{{ inventory_namespace }}'
       labels:
         app: report-uri
         epfl.ch/visibility: public
@@ -135,7 +135,7 @@
     - >-
       "report-uri.image.promote" in ansible_run_tags
     - >-
-      openshift_namespace == "wwp"
+      inventory_namespace == "wwp"
   tags: report-uri.image.promote
   local_action:
     module: shell
