--- a/ansible/roles/wordpress-namespace/tasks/routes.yml
+++ b/ansible/roles/wordpress-namespace/tasks/routes.yml
@@ -3,14 +3,14 @@
 
 - name: Create static routes
   delegate_to: localhost
-  with_items: "{{ static_routes[openshift_namespace] }}"
+  with_items: "{{ static_routes[inventory_namespace] }}"
   openshift:
     state: latest
     apiVersion: v1
     kind: Route
     metadata:
       name: "{{ item.name }}"
-      namespace: "{{ openshift_namespace }}"
+      namespace: "{{ inventory_namespace }}"
       labels:
         app: "{{ item.name }}"
       annotations:
