--- a/ansible/roles/wordpress-namespace/vars/main.yml
+++ b/ansible/roles/wordpress-namespace/vars/main.yml
@@ -1,7 +1,7 @@
 ---
 # vars file for wordpress-namespace
 
-openshift_is_production: "{{ openshift_namespace == 'wwp' }}"
+openshift_is_production: "{{ inventory_namespace == 'wwp' }}"
 
 nodejs_base_image_name: node
 nodejs_base_image_tag: 20-alpine
