--- a/ansible/roles/wordpress-namespace/tasks/menu-api.yml
+++ b/ansible/roles/wordpress-namespace/tasks/menu-api.yml
@@ -187,7 +187,7 @@
 
 - name: "Promote menu-api-siblings images from wwp-test to wwp"
   when: >-
-    openshift_is_production
+    inventory_namespace == 'wwp'
   tags: menu_api.promote
   local_action:
     module: shell
