[refactor]&[fix] secrets used for serving
- Rename `a/r/wp-ns/tasks/smtp-secret.yml` to `a/r/wp-ns/secrets.yml`
and merge `a/r/rke2-cluster/tasks/plugins.yml` into it
- Move `eyaml_keys:` out of the inventory and into the secret files
- Introduce `inventory_deployment_stage` into the inventory instead
- Reorganize all the building- and serving-related secrets
into files named after purpose and `inventory_deployment_stage`
(leaving the S3-related secrets in their current, broken state for
now)

--- a/ansible/inventory/prod/wordpress_namespaces.yml
+++ b/ansible/inventory/prod/wordpress_namespaces.yml
@@ -9,9 +9,7 @@ all_namespaces:
       children:
         openshift_namespaces_prod:
           vars:
-            eyaml_keys:
-              priv: "/keybase/team/epfl_wp_prod/eyaml-privkey.pem"
-              pub: "{{ playbook_dir }}/eyaml/epfl_wp_prod.pem"
+            inventory_deployment_stage: production
           "hosts":
             svc0041p-wordpress:
               inventory_namespace: svc0041p-wordpress
