--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -1,10 +1,21 @@
-- include_vars: ../vars/rke2-cluster-vars.yml
-  tags: always
+- tags: always
+  include_vars: "serving-secrets-{{ inventory_deployment_stage }}.yml"
 
-- include_vars: ../../../vars/secrets-wwp.yml
-  tags: always
+- name: "SMTP password"
+  kubernetes.core.k8s:
+    state: present
+    definition:
+      apiVersion: v1
+      kind: Secret
+      type: Opaque
+      metadata:
+        name: "smtp-password"
+        namespace: "{{ inventory_namespace }}"
+      data:
+         SERVICE_WWP_NOREPLY_PASSWORD: "{{ smtp.password | eyaml(eyaml_keys) | b64encode }}"
+  tags: httpd.secrets
 
-- name: EPFL Plugins Secrets
+- name: EPFL plugin secrets
   kubernetes.core.k8s:
     state: present
     definition:
@@ -12,7 +23,7 @@
       kind: Secret
       metadata:
         name: wp-plugin-secrets
-        namespace: "{{ rancher_cluster_name }}"
+        namespace: "{{ inventory_namespace }}"
       type: Opaque
       stringData:
         restauration_api_password: "{{ restauration.api_password | eyaml(eyaml_keys) }}"
