--- a/ansible/inventory/prod/wordpress_namespaces.yml
+++ b/ansible/inventory/prod/wordpress_namespaces.yml
@@ -1,12 +1,17 @@
 all_namespaces:
+  vars:
+    # Unless stipulated otherwise in a task, wrangling a namespace happens
+    # from the operator's workstation.
+    ansible_connection: local
+    ansible_python_interpreter: "{{ ansible_playbook_python }}"
   children:
-    openshift_namespaces_prod:
-      vars:
-        ansible_connection: local  # Unless stipulated otherwise in a task
-        eyaml_keys:
-          priv: "/keybase/team/epfl_wp_prod/eyaml-privkey.pem"
-          pub: "{{ playbook_dir }}/eyaml/epfl_wp_prod.pem"
-      "hosts":
-        svc0041p-wordpress:
-          ansible_python_interpreter: "{{ansible_playbook_python}}"
-          inventory_namespace: svc0041p-wordpress
+    openshift_namespaces:
+      children:
+        openshift_namespaces_prod:
+          vars:
+            eyaml_keys:
+              priv: "/keybase/team/epfl_wp_prod/eyaml-privkey.pem"
+              pub: "{{ playbook_dir }}/eyaml/epfl_wp_prod.pem"
+          "hosts":
+            svc0041p-wordpress:
+              inventory_namespace: svc0041p-wordpress
