[fix] As per review, fix typo

--- a/ansible/roles/wordpress-namespace/tasks/mariadb.yml
+++ b/ansible/roles/wordpress-namespace/tasks/mariadb.yml
@@ -18,7 +18,7 @@
           enabled: true
 
 
-- name: "`Database/wordpres-test`"
+- name: "`Database/wordpress-test`"
   kubernetes.core.k8s:
     state: present
     definition:
