[refactor] `wpn-nginx` → `wp-nginx`
... except not (yet) in image names on `quay-its.epfl.ch`. Bump these
to (uncommitted?) version du jour seen on RKE2 instead.

--- a/ansible/roles/rke2-cluster/tasks/main.yml
+++ b/ansible/roles/rke2-cluster/tasks/main.yml
@@ -102,7 +102,7 @@
 
 - name: Create nginx objects
   include_tasks:
-    file: wpn-nginx.yml
+    file: nginx.yml
     apply:
       tags:
         - cluster.nginx
