--- a/ansible/roles/wordpress-namespace/tasks/main.yml
+++ b/ansible/roles/wordpress-namespace/tasks/main.yml
@@ -23,6 +23,11 @@
       tags:
         - wp
         - wp.web
+      vars:
+        # We want to manage RBAC in RKE2 clusters only — OpenShifts
+        # (and OKDs) use OLM as the RBAC vehicle instead:
+        _rbac_managed: >-
+          {{ "rke2_namespaces" in group_names }}
   tags:
     - wp
     - wp.web
