--- a/ansible/roles/rke2-cluster/tasks/nginx.yml
+++ b/ansible/roles/rke2-cluster/tasks/nginx.yml
@@ -249,7 +249,7 @@
       apiVersion: v1
       kind: Service
       metadata:
-        name: wp-nginx-service
+        name: wp-nginx
         namespace: "{{ namespace_name }}"
         labels:
           app: wp-nginx
@@ -284,7 +284,7 @@
                   path: /
                   backend:
                     service:
-                      name: wp-nginx-service
+                      name: wp-nginx
                       port:
                         number: 80
 
