--- a/ansible/inventory/prod/wordpress_namespaces.yml
+++ b/ansible/inventory/prod/wordpress_namespaces.yml
@@ -10,6 +10,8 @@ all_namespaces:
         openshift_namespaces_prod:
           vars:
             inventory_deployment_stage: production
-          "hosts":
-            svc0041p-wordpress:
+          "hosts":   # Not real hosts, hence the scarequotes
+            namespace:svc0041p-wordpress:
               inventory_namespace: svc0041p-wordpress
+              openshift_login:
+                url: https://api.ocpitsp0001.xaas.epfl.ch:6443
