--- a/ansible/inventory/test/wordpress_namespaces.yml
+++ b/ansible/inventory/test/wordpress_namespaces.yml
@@ -10,19 +10,25 @@ all_namespaces:
         openshift_namespaces_test:
           vars:
             inventory_deployment_stage: test
-          "hosts":
-            svc0041t-wordpress:
+          "hosts":   # Not real hosts, hence the scarequotes
+            namespace:svc0041t-wordpress:
               inventory_namespace: svc0041t-wordpress
               openshift_login:
                 url: https://api.ocpitst0001.xaas.epfl.ch:6443
+                insecure: true
+            namespace:wordpress-test-in-okd:
+              inventory_namespace: wordpress-test
+              openshift_login:
+                url: https://api.okd-test.fsd.team:6443
                 insecure: true
     rke2_namespaces:
       children:
         rke2_namespaces_test:
           vars:
             inventory_deployment_stage: test
-          "hosts":
-            rancher-wordpress-test:
-              ansible_rancher_cluster_name: wordpress-test
-              ansible_rancher_url: https://rancher-fsd.epfl.ch
+          "hosts":   # Ibid.
+            namespace:wordpress-test-in-rancher:
               inventory_namespace: wordpress-test
+              ansible_rancher_url: https://rancher-fsd.epfl.ch
+              ansible_rancher_cluster_name: wordpress-test
+              ansible_user: root
