[refactor] Eliminate `wpn_namespace` (misnomer)
The existing `ansible_rancher_cluster_name` variable happens to have
the proper name, as well as the proper value.

--- a/ansible/roles/rke2-node/tasks/main.yml
+++ b/ansible/roles/rke2-node/tasks/main.yml
@@ -73,7 +73,7 @@
 
 - epfl_si.rancher.rancher_registration:
     rancher_manager_url: "https://{{ RKE_INSTALL_SERVER }}"
-    cluster_name: "{{ wpn_namespace }}"
+    cluster_name: "{{ ansible_rancher_cluster_name }}"
   register: _token_etc
   delegate_to: localhost
   run_once: true
