--- a/ansible/roles/rke2-node/vars/rancher-vars.yml
+++ b/ansible/roles/rke2-node/vars/rancher-vars.yml
@@ -1,1 +1,2 @@
 installed_node_names: "{{ (node_list.resources if 'resources' in node_list else []) | map(attribute='metadata.name') }}"
+rke2_install_server: rancher-fsd.epfl.ch
